# dcx

./: .gitignore  README.md  pyproject.toml
src/dcx/: __init__.py  cli.py
src/dcx/commands/: __init__.py  config.py  delete.py  info.py  list.py  load.py  validate.py
src/dcx/core/: __init__.py  loader.py  settings.py  snowflake.py
test_data/: DEGREE.txt  ENROLLMENT.txt  STUDENT.txt
